removed 6th project, and tried to align contact form correctly

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -26,7 +26,7 @@ section, footer{
 
 section{
     display: flex;
-    
+    padding: 5px;    
 }
 
 header h1{
@@ -76,6 +76,11 @@ header h1{
     margin: 5px;
     height: 200px;
     width: auto;
+}
+
+.contact-me{
+    display: flex;
+    flex-direction: column;
 }
 
 footer{
